--- a/app/src/main/res/layout/fragment_month_this.xml
+++ b/app/src/main/res/layout/fragment_month_this.xml
@@ -37,30 +37,48 @@
 
 
                     <LinearLayout
+                        android:id="@+id/linear_header"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:id="@+id/linear_header">
+                        android:orientation="vertical">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Информация за: "
+                                android:textSize="16sp"
+                                />
+
+                            <Spinner
+                                android:id="@+id/spinner_month_this"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:entries="@array/spinner_month_this">
+
+                            </Spinner>
+                        </LinearLayout>
 
                         <TextView
+                            android:id="@+id/month_header_page_month_this"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Информация за: "
-                            android:textSize="16sp"
-                            />
+                            android:layout_gravity="center_horizontal"
+                            android:text="Month Year"
+                            android:textColor="@color/white"
+                            android:textSize="35sp"/>
 
-                        <Spinner
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:entries="@array/spinner_month_this">
-
-                        </Spinner>
                     </LinearLayout>
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
-                        android:background="@color/white"
                         android:layout_below="@id/linear_header"
-                        android:layout_marginTop="10dp">
+                        android:layout_marginTop="10dp"
+                        android:background="@color/white">
 
                     </LinearLayout>
 
@@ -69,11 +87,11 @@
                         android:id="@+id/incomeFE"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Доход"
-                        android:textSize="20sp"
-                        android:layout_marginTop="20dp"
+                        android:layout_alignParentStart="true"
                         android:layout_below="@+id/linear_header"
-                        android:layout_alignParentStart="true"/>
+                        android:layout_marginTop="20dp"
+                        android:text="Доход"
+                        android:textSize="20sp"/>
 
                     <TextView
                         android:id="@+id/outcomeFE"
